# daydream2hid

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
src/: bluetooth.c  buttons.c  daydream.c  leds.c  main.c  main.h  mouse.c  usb_hid.c  usbd.c
